--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,99 @@
 /* styles.css */
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700;800&display=swap');
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+body {
+  font-family: 'poppins', sans-serif;
+  background-image: url('./assets/background.jpg');
+  background-size: cover;
+  background-position: top center;
+}
+
+.app-wrap {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+  background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3));
+}
+
+header {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 50px 15px 15px;
+}
+
+header input {
+  width: 100%;
+  max-width: 500px;
+  padding: 10px 15px;
+  border: solid;
+  background-color: rgba(255, 255, 255, 0.3);
+  border-radius: 8px;
+  border-bottom: 3px solid gray;
+
+  color: black;
+  font-size: 20px;
+  font-weight: 500;
+  transition: 0.2s ease-out;
+}
+
+header input:focus {
+  background-color: rgba(255, 255, 255, 0.6);
+}
+
+main {
+  flex: 1 1 100%;
+  padding: 25px 25px 50px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+}
+
+.location .city {
+  color: #fff;
+  font-size: 32px;
+  font-weight: 500;
+  margin-bottom: 5px;
+  text-shadow: 5px 5px rgba(0, 0, 0, 0.6);
+}
+
+.location .date {
+  color: #fff;
+  font-size: 16px;
+}
+
+.current .temp {
+  color: #fff;
+  font-size: 140px;
+  font-weight: 1000;
+  margin: 30px 0px;
+  text-shadow: 5px 15px rgba(0, 0, 0, 0.6);
+}
+
+.current .temp span {
+  font-weight: 500;
+}
+
+.current .weather {
+  color: #fff;
+  font-size: 32px;
+  font-weight: 800;
+  font-style: italic;
+  margin-bottom: 15px;
+  text-shadow: 5px 5px rgba(0, 0, 0, 0.6);
+}
+
+.current .min-max {
+  color: #fff;
+  font-size: 24px;
+  font-weight: 500;
+  text-shadow: 5px 5px rgba(0, 0, 0, 0.6);
+}
 
 /* Add styles here to customize the appearance of your app */
