--- a/styles.css
+++ b/styles.css
@@ -8,9 +8,17 @@
 }
 body {
   font-family: 'poppins', sans-serif;
-  background-image: url('./assets/background.jpg');
+  /* background-image: url('./assets/background.jpg'); */
   background-size: cover;
   background-position: top center;
+}
+
+section {
+  z-index: 10;
+}
+
+div {
+  z-index: 10;
 }
 
 .app-wrap {
@@ -32,9 +40,10 @@ header input {
   max-width: 500px;
   padding: 10px 15px;
   border: solid;
-  background-color: rgba(255, 255, 255, 0.3);
+  background-color: rgba(255, 255, 255, 0.8);
   border-radius: 8px;
   border-bottom: 3px solid gray;
+  z-index: 10;
 
   color: black;
   font-size: 20px;
@@ -43,7 +52,16 @@ header input {
 }
 
 header input:focus {
-  background-color: rgba(255, 255, 255, 0.6);
+  background-color: rgba(255, 255, 255, 1.5);
+}
+
+video {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
 main {
@@ -58,14 +76,17 @@ main {
 .location .city {
   color: #fff;
   font-size: 32px;
-  font-weight: 500;
+  font-weight: 900;
   margin-bottom: 5px;
-  text-shadow: 5px 5px rgba(0, 0, 0, 0.6);
+  text-shadow: 0px 5px rgba(0, 0, 0, 0.6);
+
 }
 
 .location .date {
   color: #fff;
-  font-size: 16px;
+  font-size: 20px;
+  font-weight: 500;
+  text-shadow: 0px 3px rgba(0, 0, 0, 0.6);
 }
 
 .current .temp {
@@ -73,7 +94,7 @@ main {
   font-size: 140px;
   font-weight: 1000;
   margin: 30px 0px;
-  text-shadow: 5px 15px rgba(0, 0, 0, 0.6);
+  text-shadow: 5px 10px rgba(0, 0, 0, 0.6);
 }
 
 .current .temp span {
@@ -86,14 +107,14 @@ main {
   font-weight: 800;
   font-style: italic;
   margin-bottom: 15px;
-  text-shadow: 5px 5px rgba(0, 0, 0, 0.6);
+  text-shadow: 0px 5px rgba(0, 0, 0, 0.6);
 }
 
 .current .min-max {
   color: #fff;
   font-size: 24px;
   font-weight: 500;
-  text-shadow: 5px 5px rgba(0, 0, 0, 0.6);
+  text-shadow: 0px 4px rgba(0, 0, 0, 0.6);
 }
 
 /* Add styles here to customize the appearance of your app */
