--- a/styles.css
+++ b/styles.css
@@ -45,7 +45,7 @@ header input {
   border-bottom: 3px solid gray;
   z-index: 10;
 
-  color: black;
+  color: #111;
   font-size: 20px;
   font-weight: 500;
   transition: 0.2s ease-out;
@@ -117,4 +117,60 @@ main {
   text-shadow: 0px 4px rgba(0, 0, 0, 0.6);
 }
 
+footer {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background: #111;
+  height: 20%;
+  width: 100%;
+  font-family: 'poppins', sans-serif;
+  flex-direction: column;
+  padding-top: 40px;
+  color: #fff;
+  z-index: 10px;
+  opacity: 0.7;
+}
+
+.footer-content{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  text-align: center;
+}
+
+.footer-content h3{
+  font-size: 1rem;
+  font-weight: 400;
+  text-transform: capitalize;
+  line-height: 3rem;
+}
+
+.social-media{
+  list-style: none;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 1rem 0 3rem 0;
+}
+
+.social-media li{
+  margin: 0 10px;
+}
+
+.social-media a{
+  text-decoration: none;
+  color: #fff;
+}
+
+.social-media a i{
+  font-size: 1rem;
+  transition: color .4s ease;
+}
+
+.social-media a:hover{
+  color: aqua;
+}
 /* Add styles here to customize the appearance of your app */
