--- a/styles.css
+++ b/styles.css
@@ -73,6 +73,25 @@ main {
   text-align: center;
 }
 
+
+h3{
+  display: flex;
+  align-items: left;
+  font-size: 1rem;
+  font-weight: 400;
+  text-transform: capitalize;
+  line-height: 3rem;
+  color: #fff;
+  padding: 0 1rem;
+  font-weight: 400;
+  margin-bottom: 1rem;
+}
+
+a {
+  text-decoration: none;
+  color: black;
+}
+
 .location .city {
   color: #fff;
   font-size: 32px;
@@ -128,49 +147,93 @@ footer {
   font-family: 'poppins', sans-serif;
   flex-direction: column;
   padding-top: 40px;
-  color: #fff;
   z-index: 10px;
   opacity: 0.7;
 }
 
-.footer-content{
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
+/*----------------------------------------------------------------*/
+
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: 'Poppins', sans-serif;
+}
+
+.wrapper {
+  padding: 0 1rem 1rem;
+  margin-bottom: 1rem;
+}
+
+.wrapper .button{
+  display: inline-block;
+  height: 60px;
+  width: 60px;
+  float: left;
+  margin: 0 5px;
+  overflow: hidden;
+  background: #fff;
+  border-radius: 50px;
+  cursor: pointer;
+  box-shadow: 0px 10px 10px rgba(0,0,0,0.1);
+  transition: all 0.3s ease-out;
+}
+.wrapper .button:hover{
+  width: 200px;
+}
+.wrapper .button .icon{
+  display: inline-block;
+  height: 60px;
+  width: 60px;
   text-align: center;
+  border-radius: 50px;
+  box-sizing: border-box;
+  line-height: 60px;
+  transition: all 0.3s ease-out;
 }
-
-.footer-content h3{
-  font-size: 1rem;
-  font-weight: 400;
-  text-transform: capitalize;
-  line-height: 3rem;
+.wrapper .button:nth-child(1):hover .icon{
+  background: #4267B2;
 }
-
-.social-media{
-  list-style: none;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  margin: 1rem 0 3rem 0;
+.wrapper .button:nth-child(2):hover .icon{
+  background: #1DA1F2;
 }
-
-.social-media li{
-  margin: 0 10px;
+.wrapper .button:nth-child(3):hover .icon{
+  background: #E1306C;
 }
-
-.social-media a{
-  text-decoration: none;
+.wrapper .button:nth-child(4):hover .icon{
+  background: #333;
+}
+.wrapper .button:nth-child(5):hover .icon{
+  background: #ff0000;
+}
+.wrapper .button .icon i{
+  font-size: 25px;
+  line-height: 60px;
+  transition: all 0.3s ease-out;
+}
+.wrapper .button:hover .icon i{
   color: #fff;
 }
-
-.social-media a i{
-  font-size: 1rem;
-  transition: color .4s ease;
+.wrapper .button span{
+  font-size: 20px;
+  font-weight: 500;
+  line-height: 60px;
+  margin-left: 10px;
+  transition: all 0.3s ease-out;
 }
-
-.social-media a:hover{
-  color: aqua;
+.wrapper .button:nth-child(1) span{
+  color: #4267B2;
+}
+.wrapper .button:nth-child(2) span{
+  color: #1DA1F2;
+}
+.wrapper .button:nth-child(3) span{
+  color: #E1306C;
+}
+.wrapper .button:nth-child(4) span{
+  color: #333;
+}
+.wrapper .button:nth-child(5) span{
+  color: #ff0000;
 }
 /* Add styles here to customize the appearance of your app */
