--- a/styles.css
+++ b/styles.css
@@ -39,9 +39,9 @@ header input {
   width: 100%;
   max-width: 500px;
   padding: 10px 15px;
-  border: solid;
+  border: none;
   background-color: rgba(255, 255, 255, 0.8);
-  border-radius: 8px;
+  border-radius: 8px 0px 0px 8px;
   border-bottom: 3px solid gray;
   z-index: 10;
 
@@ -53,6 +53,28 @@ header input {
 
 header input:focus {
   background-color: rgba(255, 255, 255, 1.5);
+}
+
+button {
+  width: 6rem;
+  max-width: 500px;
+  padding: 10px 5px;
+  border: none;
+  background-color: rgba(255, 255, 255, 0.9);
+  border-radius: 0px 8px 8px 0px;
+  border-bottom: 3px solid gray;
+  z-index: 10;
+
+  cursor: pointer;
+  color: #111;
+  font-size: 20px;
+  font-weight: 500;
+  transition: 0.2s ease-out;
+}
+
+button:hover {
+  background-color: #fff;
+
 }
 
 video {
@@ -147,7 +169,6 @@ footer {
   font-family: 'poppins', sans-serif;
   flex-direction: column;
   padding-top: 40px;
-  z-index: 10px;
   opacity: 0.7;
 }
 
